更新日志显示查询页面
